# quadratic-conv

./: .gitignore  README.md  pyproject.toml
pytorch-numba-extension-jit/: README.md  pyproject.toml
pytorch-numba-extension-jit/examples/: annotation_interface.py  custom_op.py  mymuladd.py  try_ext_gen.py
pytorch-numba-extension-jit/html/pytorch_numba_extension_jit/: index.html
pytorch-numba-extension-jit/src/pytorch_numba_extension_jit/: __init__.py  _codegen.py  _compiler.py  _torchlib_wrapper.py  _typehint_interface.py  as_dtype.py  codegen.py  compile.py  cpp_codegen.py  torchlib_wrap.py  torchlib_wrapper.py
pytorch-semifield-conv/: README.md  pyproject.toml
pytorch-semifield-conv/examples/: dilation.py  ops_equivalent.py  try_ext_conv.py
pytorch-semifield-conv/html/pytorch_semifield_conv/: index.html
pytorch-semifield-conv/src/pytorch_semifield_conv/: __init__.py  _compiled_conv.py  _conv_modules.py  _learned_pos_def.py  _quadratic.py  _sf_broadcast.py  _sf_select.py  _sf_subtract.py  _utils.py  compiled_conv.py  conv_modules.py  cuda_select.py  sf_broadcast.py  sf_select.py  sf_subtract.py  unfold_broadcast.py  unfold_view.py  utils.py
pytorch-semifield-conv/src/pytorch_semifield_conv/convolutions/: compiled_conv.py  conv_modules.py  sf_broadcast.py  sf_select.py  sf_subtract.py  utils.py
pytorch-semifield-conv/src/pytorch_semifield_conv/kernels/: learned_pos_def.py  quadratic.py  utils.py
report/: README.md  extension.tex  lit_draft.tex  project_proposal.tex  references.bib  report.tex
scratch/: README.md  adjunction.ipynb  groups_test.ipynb  model_check.ipynb  numba.ipynb  nv_profile.py  nv_profile_shfl.py  nv_profile_shmem.py  nv_timings.ipynb  overhead.ipynb  result_check.ipynb  results.ipynb  strides.ipynb  test.ipynb  timings.ipynb  training_check.ipynb  typehints.ipynb
src/: README.md  conv.py  convolutions.py  load_data.py
src/convolutions/: __init__.py  cuda_select.py  unfold.py  unfold_broadcast.py  utils.py
src/experiments/: closing_experiments.py  closing_k_mnist.py  long_cifar10.py  long_fashion.py  long_k_mnist.py  long_kmnist.py  long_lenet.py  long_svhn.py  nonlinear_k_mnist.py  plot_adjunction.ipynb  plot_tropical_convs.py  replicate_thierry.py  test_kmnist.py  test_lenet.py  train.sh  trial_run_cifar.py  try_gangoly_cifar.py  try_gangoly_cifar_longer.py  try_lenet_likes.py
src/experiments/old/: try_gangoly_cifar.py  try_gangoly_cifar_longer.py  try_lenet_likes.py
src/graphs/: datasets.ipynb  dilation_illustration.ipynb  proof_of_concept.ipynb  results.ipynb  scale_space.ipynb
src/kernels/: __init__.py  gaussian.py  learned_pos_def.py  quadratic.py  utils.py
src/models/: __init__.py  gangoly_cifar.py  lenet_like.py  simple_cifar10.py  simple_lenet.py  simple_svhn.py  trainer.py  utils.py
src/models/configurations/: simple_lenet.py  utils.py
src/models/old/: gangoly_cifar.py  lenet_like.py  trainer_multiproc.py
