[project]
name = "quadratic-convnet"
version = "0.1.0"
description = "BSc Thesis project 'Quadratic Forms in Convolutional Neural Networks'"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"


[tool.uv.sources]
torch = [
#    My home server uses the CUDA 12.8 nightly version
    { index = "torch-cu128", marker = "sys_platform == 'manylinux_2_39_x86_64'" },
    { index = "pypi", marker = "sys_platform != 'manylinux_2_39_x86_64'" },
]
torchvision = [
    { index = "torch-cu128", marker = "sys_platform == 'manylinux_2_39_x86_64'" },
    { index = "pypi", marker = "sys_platform != 'manylinux_2_39_x86_64'" },
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
