[project]
name = "quadratic-convnet"
version = "0.1.0"
description = "BSc Thesis project 'Quadratic Forms in Convolutional Neural Networks'"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "grpcio>=1.71.0", # required by keras-tuner
    "jupyter>=1.1.1",
    "keras>=3.9.1",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "protobuf>=6.30.2", # required by keras-tuner
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0 ; sys_platform != 'linux' or platform_machine != 'x86_64' ",
    "torch>=2.8.0.dev20250331 ; sys_platform == 'linux' and platform_machine == 'x86_64' ",
    "torchvision>=0.21.0",
    "torchvision>=0.22.0.dev20250331 ; sys_platform == 'linux' and platform_machine == 'x86_64' ",
    "pytorch-triton>=3.3.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true


[tool.uv.sources]
torch = [
    #    My home server uses the CUDA 12.8 nightly version
    { index = "torch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' " },
]
torchvision = [
    { index = "torch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' " },
]

pytorch-triton = [
    { index = "torch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
