[project]
name = "quadratic-convnet"
version = "0.1.0"
description = "BSc Thesis project 'Quadratic Forms in Convolutional Neural Networks'"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numba-cuda>=0.9.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "pytorch-numba-extension-jit",
    "pytorch-semifield-conv",
    "tqdm>=4.67.1",
]


[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [
    { index = "torch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "torch-cu128", marker = "sys_platform != 'darwin'" },
]

pytorch-numba-extension-jit = [
    { path = "./pytorch-numba-extension-jit" }
]
pytorch-semifield-conv = [
    { path = "./pytorch-semifield-conv" }
]
#pytorch-numba-extension-jit = [
#    { workspace = true }
#]
#
#[tool.uv.workspace]
#members = ["pytorch-numba-extension-jit"]

[tool.uv]
reinstall-package = ["pytorch-numba-extension-jit", "pytorch-semifield-conv"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ruff>=0.11.7",
]
