[project]
name = "pytorch-semifield-conv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "p-adema", email = "117938385+p-adema@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numba-cuda>=0.9.0",
    "torch>=2.7.0",
    "uuid>=1.30",
    "pytorch_numba_extension_jit",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "matplotlib>=3.10.1",
    "pdoc3>=0.11.6",
    #    "pdoc>=15.0.3",
    "ruff>=0.11.7",
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [
    { index = "torch-cu128", marker = "sys_platform != 'darwin'" },
]

pytorch-numba-extension-jit = [
    { path = "../pytorch-numba-extension-jit" }
]


[tool.uv]
reinstall-package = ["pytorch-numba-extension-jit"]
